# Nimmakai

./: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Procfile  README.md  analytics-dashboard-adr.md  build-frontend.sh  docker-compose.do.yml  docker-compose.hotdeploy.yml  fable_audit.md  pyproject.toml  requirements.txt
.do/: app.yaml
.github/workflows/: ci.yml  deploy-digitalocean.yml
config/: models.yaml  providers.yaml
docs/: design-intelligent-router.md  digitalocean.md  email-smtp.md  integration.md
docs/superpowers/plans/: 2026-07-10-dynamic-context-window.md  2026-07-10-intelligent-router.md  2026-07-10-multi-provider-gateway.md  2026-07-19-multi-tenant-accounts.md
docs/superpowers/specs/: 2026-07-10-dynamic-context-window-design.md  2026-07-10-dynamic-family-routing-design.md  2026-07-10-multi-provider-gateway-design.md  2026-07-19-multi-tenant-accounts-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AuthModal.tsx  RangePicker.tsx  Sidebar.tsx  charts.tsx  ui.tsx
frontend/src/hooks/: useAnalytics.ts  useApi.ts
frontend/src/lib/: api.ts  format.ts
frontend/src/pages/: AccountPage.tsx  AnalyticsOverviewPage.tsx  CostPage.tsx  DashboardPage.tsx  HealthPage.tsx  IntentsPage.tsx  LiveFeedPage.tsx  ModelsPage.tsx  PlaygroundPage.tsx  ProvidersPage.tsx  RequestsPage.tsx  RoutingPage.tsx  TracingPage.tsx  UsersPage.tsx
frontend/src/types/: analytics.ts  index.ts
scripts/: do-smoke.sh  generate-do-userdata.sh
src/nimmakai/: __init__.py  auth.py  balancer.py  compat.py  config.py  logging_setup.py  main.py  resilience.py  upstream.py
src/nimmakai/accounts/: __init__.py  crypto.py  email.py  schema.py  store.py
src/nimmakai/analytics/: __init__.py  context.py  cost.py  events.py  models.py  models_cost.py  otel.py  retention.py  schema.py  store.py  webhook.py  writer.py
src/nimmakai/catalog/: __init__.py  aliases.py  context.py  db.py  docs_fetcher.py  families.py  health.py  hub.py  ladder.py  learning.py  preferences.py  presets.py  prober.py  providers.py  registry.py  schema.py
src/nimmakai/data/: models.yaml
tasks/: lessons.md
tests/: test_accounts.py  test_adaptive_health.py  test_admin_api.py  test_analytics.py  test_audit_fixes.py  test_auto_router.py  test_backoff.py  test_balancer.py  test_catalog.py  test_classifier.py  test_compat.py  test_context.py  test_custom_provider_flow.py  test_egress_proxy.py  test_email_smtp.py  test_fallback.py  test_hub.py  test_ladder.py  test_learning.py  test_model_pool_toggle.py  test_models_cost.py  test_multi_provider_pool.py  test_optimizer.py  test_preferences.py  test_presets.py  test_provider_env_alias.py  test_providers.py  test_ranking_cache.py  test_request_logging.py  test_resilience_coding.py  test_safety.py  test_scoring_properties.py  test_selector.py  test_self_healing.py  test_sqlite_store.py
tests/eval/: __init__.py  test_routing_evals.py
(+21 files in other folders)
