[project]
name = "nimmakai"
version = "0.4.1"
description = "OpenAI-compatible multi-key proxy for NVIDIA NIM with intelligent routing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nimmakai contributors" }]
keywords = ["nvidia", "nim", "openai", "proxy", "load-balancer", "fastapi", "router"]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/nimmakai/nimmakai"
Documentation = "https://github.com/nimmakai/nimmakai#readme"
Issues = "https://github.com/nimmakai/nimmakai/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
]

[project.scripts]
nimmakai = "nimmakai.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nimmakai"]

[tool.hatch.build.targets.wheel.force-include]
"src/nimmakai/data/models.yaml" = "nimmakai/data/models.yaml"
"src/nimmakai/static/index.html" = "nimmakai/static/index.html"

[tool.hatch.build.targets.sdist]
include = [
    "src/nimmakai",
    "config/models.yaml",
    "LICENSE",
    "README.md",
    "docs",
    "tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
